# SDL3-Engine

./: .gitignore  CMakeLists.txt
src/: engine.c  engine.h  main.c  test.c
