cmake_minimum_required(VERSION 4.1)

project(engine)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
if (APPLE)
	set(CMAKE_INSTALL_RPATH "/use/local/lib")
endif()
find_package(SDL3 REQUIRED)

if(SDL3_FOUND)
	include_directories(${SDL3_INCLUDE_DIRS})
else()
	if(WIN32)
		include_directories("$ENV:SDLDIR\\x86_64-w64-mingw32\\include")
		link_directories("$ENV:SDLDIR\\x86_64-w64-mingw32\\lib")
	else()
		include_directories("$SDLDIR/include")
		link_directories("$SDLDIR/lib")
	endif()
endif()
add_executable(engine src/test.c src/engine.c)
target_link_libraries(engine SDL3 SDL3_image SDL3_ttf)
